0003-Ricoh_Rc5t619_regulator_battery_rtc_driver_add.patch

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -422,6 +422,14 @@ config REGULATOR_MAX77843
 	  The regulator include two 'SAFEOUT' for USB(Universal Serial Bus)
 	  This is suitable for Exynos5433 SoC chips.
 
+config REGULATOR_RICOH619
+	tristate "RICOH 619 Power regulators"
+	depends on MFD_RICOH619
+	default n
+	help
+	  This driver supports regulator driver for RICOH619 PMIC.
+
+
 config REGULATOR_MC13XXX_CORE
 	tristate
 
@@ -552,6 +560,16 @@ config REGULATOR_S2MPA01
 	help
 	 This driver controls Samsung S2MPA01 voltage output regulator
 	 via I2C bus. S2MPA01 has 10 Bucks and 26 LDO outputs.
+
+config REGULATOR_RC5T619
+	tristate "RICOH RC5T619 Power regulators"
+	depends on MFD_RC5T619
+	help
+	  Select this option to enable the power regulator of RICOH
+	  PMIC RC5T619.
+	  This driver supports the control of different power rails of device
+	  through regulator interface. The device supports multiple DCDC/LDO
+	  outputs which can be controlled by i2c communication.
 
 config REGULATOR_S2MPS11
 	tristate "Samsung S2MPS11/S2MPS13/S2MPS14/S2MPU02 voltage regulator"
